--- a/products.html
+++ b/products.html
@@ -38,10 +38,10 @@
             <div class="collapse navbar-collapse col-lg-6" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" href="about.html">Quienes Somos</a>
+                        <a class="nav-link" href="about.html">Quienes Somos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="products.html">Productos</a>
+                        <a class="nav-link active" href="products.html">Productos</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contáctenos</a>
@@ -57,6 +57,128 @@
                 <div class="content-hero">
                     <h1>En Mac Master Importadores
                         nuestra prioridad es atenderte</h1>
+                    <p>Productos confiables, duraderos y técnicamente respaldados.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- products -->
+    <section id="products">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="content-produts">
+                    <div class="title-description">
+                        <h2>Categorías de productos</h2>
+                        <p>En Mac Master Importadores ofrecemos un portafolio especializado en productos industriales
+                            MRO
+                            (Mantenimiento, Reparación y Operación). Desde soluciones en tornillería hasta adhesivos
+                            estructurales, contamos con insumos
+                            confiables, de alta durabilidad y con respaldo técnico para satisfacer las necesidades de la
+                            industria colombiana. Explora nuestras líneas
+                            de productos diseñadas para mantener la continuidad operativa y la eficiencia en todo tipo
+                            de
+                            entornos productivos.</p>
+                    </div>
+                    <div class="product-card">
+                        <h3>Tornillería Industrial</h3>
+                        <div class="content-card firts-content">
+                            <div class="card first">
+                                <a href="#">
+                                    <img src="Assets/03.products/01.tornillos/Pernos-Tornillos.png"
+                                        alt="Pernos y Tornillos">
+                                    <h4>Pernos y Tornillos</h4>
+                                </a>
+                            </div>
+                            <div class="card second">
+                                <a href="#">
+                                    <img src="Assets/03.products/01.tornillos/Tuercas.png" alt="Tuercas">
+                                    <h4>Tuercas</h4>
+                                </a>
+                            </div>
+                            <div class="card third">
+                                <a href="#">
+                                    <img src="Assets/03.products/01.tornillos/Arandelas.png" alt="Arandelas">
+                                    <h4>Arandelas</h4>
+                                </a>
+                            </div>
+                            <div class="card last-product fourth">
+                                <a href="#">
+                                    <img src="Assets/03.products/01.tornillos/Varillas-espárragos-roscados.png"
+                                        alt="Varillas y espárragos roscados">
+                                    <h4>Varillas y espárragos roscados</h4>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="product-card">
+                        <h3>Abrasivos</h3>
+                        <div class="content-card">
+                            <div class="card first col-sm-4">
+                                <a href="#">
+                                    <img src="Assets/03.products/02.abrasivos/Abrasivos-para-lijado.png"
+                                        alt="Abrasivos para lijado">
+                                    <h4>Abrasivos para lijado</h4>
+                                </a>
+                            </div>
+                            <div class="card second col-sm-4">
+                                <a href="#">
+                                    <img src="Assets/03.products/02.abrasivos/Abrasivos-de-corte-desbaste.png"
+                                        alt="Abrasivos de corte y desbaste">
+                                    <h4>Abrasivos de corte y desbaste</h4>
+                                </a>
+                            </div>
+                            <div class="card last-product third col-sm-4">
+                                <a href="#">
+                                    <img src="Assets/03.products/02.abrasivos/Cepillos-abrasivos.png"
+                                        alt="Cepillos abrasivos">
+                                    <h4>Cepillos abrasivos</h4>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="product-card">
+                        <h3>Adhesivos y sellantes</h3>
+                        <div class="content-card">
+                            <div class="card first">
+                                <a href="#">
+                                    <img src="Assets/03.products/03.adhesivos/Masillas-selladores.png"
+                                        alt="Masillas, selladores y fabricantes de juntas">
+                                    <h4>Masillas, selladores y fabricantes de juntas</h4>
+                                </a>
+                            </div>
+                            <div class="card second">
+                                <a href="#">
+                                    <img src="Assets/03.products/03.adhesivos/Fijadores-de-roscas.png"
+                                        alt="Fijadores de roscas y compuestos de retención">
+                                    <h4>Fijadores de roscas y compuestos de retención</h4>
+                                </a>
+                            </div>
+                            <div class="card last-product third">
+                                <a href="#">
+                                    <img src="Assets/03.products/03.adhesivos/Cinta.png" alt="Cinta">
+                                    <h4>Cinta</h4>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="product-card">
+                        <h3>Resina y fibra de vidrio</h3>
+                        <div class="content-card">
+                            <div class="card first">
+                                <a href="#">
+                                    <img src="Assets/03.products/04.resina/Resina.png" alt="Resina">
+                                    <h4>Resina</h4>
+                                </a>
+                            </div>
+                            <div class="card last-product second">
+                                <a href="#">
+                                    <img src="Assets/03.products/04.resina/Compuestos-fibra-de-vidrio.png"
+                                        alt="Compuestos de fibra de vidrio">
+                                    <h4>Compuestos de fibra de vidrio</h4>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
